# firmware-cabir

./: .gitignore  CMakeLists.txt  TODO  sdkconfig.defaults
IC Design/Cabir_Control_Panel/: #auto_saved_files#  Cabir_Control_Panel.kicad_pcb  Cabir_Control_Panel.kicad_pro  Cabir_Control_Panel.kicad_sch  cabir.net  fp-info-cache
IC Design/Cabir_Control_Panel ver0.1/: Cabir_Control_Panel.kicad_pcb  Cabir_Control_Panel.kicad_prl  Cabir_Control_Panel.kicad_pro  Cabir_Control_Panel.kicad_sch  fp-info-cache
IC Design/Cabir_Control_Panel ver0.2/: Cabir_Control_Panel.kicad_pcb  Cabir_Control_Panel.kicad_prl  Cabir_Control_Panel.kicad_pro
main/: CMakeLists.txt  ble_server.c  ble_server.h  config.h  display.c  display.h  main.c  pid.c  pid.h  safety.c  safety.h  session.c  session.h  temperature.c  temperature.h  tpc.c  tpc.h
